2008-11-22  vadim  <vadim@vk.crocodile.org>

	* StartTipDialog.cpp (StartTipDialog::StartTipDialog): Added
	"start tip" dialog that shows brief information on the online
	resources available to the user (web site URL, links to the
	Firewall Builder FAQ, HOWTOs, Cook Book). Linked pages open in the
	standard browser.

	* FWWindow.cpp: added menu item Help/Firewall Builder Help that
	opens a page with information about online resources for Firewall
	Builder (the same page that is shown in the "start tip" dialog).

	* ipf.cpp (main): fixed bug #2328330: "basic_string::erase error
	in fwb_ipf". Compiler for ipfilter aborted processing with error
	"basic_string::erase" when compilation was launched from the GUI.

2008-11-21  vadim  <vadim@vk.crocodile.org>

	* Improved Mac OS X bundle: included qt.conf file to make it look
	only inside the bundle for QT libraries and plugins, this
	eliminated warnings about QT libraries being loaded from two
	places if the system where fwbuilder GUI was running had QT
	installed on it. Now packaging QT accessibility plugin library,
	this should make the GUI run with acessibility features if
	accessibility aids are turned on system-wide.

2008-11-20  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printLogPrefix): fixed
	bug #2318639: "bug in logging (rule number)". Added logging prefix
	macro %R that gets expanded to the ruleset name. This can be
	useful in logging prefixes for rules in branch rulesets.

2008-11-19  vadim  <vadim@vk.crocodile.org>

	* printerStream.cpp (printerStream::begin): fixed printing with QT
	4.4. QT 4.4 correctly sets physical resolution of the printer and
	sets its logical resolution to 1200dpi. This caused rulesets to be
	printed incorrectly on Windows and Mac where we use QT 4.4.1. This
	fix restores printing on these platforms.

	* Printing from command line: user can print firewall object and
	all its rulesets from command line without running the program in